Изменения верстки, включена email валидация, добавлен счетчик яндекс метрики

--- a/KINOv2/KINOv2/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/KINOv2/KINOv2/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Восстановление пароля";
 }
 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Please check your email to reset your password.
+    Письмо восстановления пароля отправлено на Вашу почту.
 </p>
