--- a/KINOv2/KINOv2/Views/Account/Lockout.cshtml
+++ b/KINOv2/KINOv2/Views/Account/Lockout.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Locked out";
+    ViewData["Title"] = "Аккаунт заблокирован";
 }
 
 <header>
     <h2 class="text-danger">@ViewData["Title"]</h2>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <p class="text-danger">Данный аккаунт заблокирован. Пожалуйста, попробуйте познее. Если ваш аккаунт был заблокирован случайно, что ж, бывает.</p>
 </header>
