--- a/KINOv2/KINOv2/Views/Home/Contact.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Contact.cshtml
@@ -19,9 +19,9 @@
     <div class="row">
         <div class="col-12 col-md-4 col-lg-4">
             <address>
-                <strong>Димон:</strong><p>Да там почти нет отличий. За час перенесу. &copy;</p><br />
-                <strong>Леха:</strong><p>Кроссплатформенность &hearts; </p><br />
-                <strong>Саня:</strong><p>На выходных обязательно возьмусь за React. &copy;</p>
+                <strong>Димон:</strong><p class="mb-0">Да там почти нет отличий. За час перенесу. &copy;</p><br />
+                <strong>Леха:</strong><p class="mb-0">Кроссплатформенность &hearts; </p><br />
+                <strong>Саня:</strong><p class="mb-0">На выходных обязательно возьмусь за React. &copy;</p>
             </address>
         </div>
 
