--- a/KINOv2/KINOv2/Views/Account/ForgotPassword.cshtml
+++ b/KINOv2/KINOv2/Views/Account/ForgotPassword.cshtml
@@ -1,21 +1,21 @@
 ﻿@model ForgotPasswordViewModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Забыли пароль?";
 }
 
 <h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
+<h4>Укажите ваш E-mail.</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="ForgotPassword" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Email"></label>
+                <label class="text-info" asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn border-orange w-100">Отправить</button>
         </form>
     </div>
 </div>
