--- a/KINOv2/KINOv2/Views/Account/Register.cshtml
+++ b/KINOv2/KINOv2/Views/Account/Register.cshtml
@@ -12,26 +12,26 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
+                <label class="text-info" asp-for="Email"></label>
+                <input asp-for="Email" class="form-control control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserName"></label>
-                <input asp-for="UserName" class="form-control" />
+                <label class="text-info" asp-for="UserName"></label>
+                <input asp-for="UserName" class="form-control control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
+                <label class="text-info" asp-for="Password"></label>
+                <input asp-for="Password" class="form-control control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
+                <label class="text-info" asp-for="ConfirmPassword"></label>
+                <input asp-for="ConfirmPassword" class="form-control control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Зарегистрироваться</button>
+            <button type="submit" class="btn border-orange w-100">Зарегистрироваться</button>
         </form>
     </div>
 </div>
