--- a/KINOv2/KINOv2/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/KINOv2/KINOv2/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = "Потверждение изменения пароля";
 }
 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Your password has been reset. Please <a asp-action="Login">click here to log in</a>.
+    Ваш пароль был успешно изменен. Для входа в систему <a class="text-orange" asp-action="Login">нажмите сюда</a>.
 </p>
