--- a/KINOv2/KINOv2/Views/Home/Film.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Film.cshtml
@@ -79,7 +79,7 @@
     <hr />
     <div class="d-md-flex flex-md-row mb-4">
         <ul class="nav col d-flex justify-content-between d-md-inline-flex align-self-md-start align-items-baseline flex-md-column" data-film-id="@film.LINK">
-            <li class="nav-item session-nav my-md-2">
+            <li class="nav-item session-nav">
                 <a class="btn border-orange col nav-link text-center session-date selected" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-filmid="@film.LINK" asp-route-date="28/09/2017" data-target="sessions">Сегодня 29.09</a>
             </li>
             <li class="nav-item dropdown d-md-none text-center">
@@ -89,13 +89,13 @@
                     <a class="dropdown-item session-date" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-filmid="@film.LINK" asp-route-date="29/09/2018" data-target="sessions">Послезавтра 31.09</a>
                 </div>
             </li>
-            <li class="nav-item session-nav d-none d-md-flex justify-content-center my-md-2">
+            <li class="nav-item session-nav d-none d-md-flex justify-content-center">
                 <a class="btn border-orange col nav-link session-date" href="#">Завтра</a>
             </li>
-            <li class="nav-item session-nav d-none d-md-flex justify-content-center my-md-2">
+            <li class="nav-item session-nav d-none d-md-flex justify-content-center">
                 <a class="btn border-orange col nav-link session-date" href="#">Послезавтра</a>
             </li>
-            <li class="nav-item session-nav my-md-2">
+            <li class="nav-item session-nav">
                 <a class="col btn border-orange nav-link date-picker" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-filmid="@film.LINK" data-target="sessions">
                     <div class="">
                         <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
@@ -136,7 +136,7 @@
                 <input id="reply-comment" type="hidden" name="replyid" value="-1" />
                 <div class="">
                     <textarea id="message" name="msg" placeholder="Напишите ответ..." style="text-align:left"></textarea>
-                    <button id="msg-sender" class="btn btn-info" type="submit" style=" z-index:1; position:absolute; bottom:0px; left:55%; background-color:#f6a21c; border-color:#f6a21c; ">Отправить</button>
+                    <button id="msg-sender" class="btn btn-info" type="submit" style="width: 30%; z-index:1; position:absolute; bottom:0px; left:55%; background-color:#f6a21c; border-color:#f6a21c; ">Отправить</button>
                 </div>
             </form>
 
