--- a/KINOv2/KINOv2/Views/Account/Login.cshtml
+++ b/KINOv2/KINOv2/Views/Account/Login.cshtml
@@ -49,9 +49,9 @@
             </form>
         </section>
     </div>
-    @*<div class="col-md-6 col-md-offset-2">
+    <div class="col-md-5 col-12 ml-auto">
         <section>
-            <h4>Use another service to log in.</h4>
+            <h4>Сторонние сервисы.</h4>
             <hr />
             @{
                 var loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
@@ -68,10 +68,10 @@
                 {
                     <form asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
                         <div>
-                            <p>
+                            <p class="text-center text-md-left">
                                 @foreach (var provider in loginProviders)
                                 {
-                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
+                                    <button type="submit" class="btn border-orange w-50" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
                                 }
                             </p>
                         </div>
@@ -79,7 +79,7 @@
                 }
             }
         </section>
-    </div>*@
+    </div>
 </div>
 
 @section Scripts {
