--- a/KINOv2/KINOv2/Views/Home/Comments.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Comments.cshtml
@@ -41,7 +41,7 @@
             </div>
              <div class="w-100 mb-2"></div>
                 <div class="col-4 col-sm-3 col-md-3">
-                    <img class="img-thumbnail" width="200" height="200" src="@((comment.ApplicationUser.ProfileImage != null) ? Url.Content("~/images/Profiles/" + comment.ApplicationUser.ProfileImage) : Url.Content("~/images/Profiles/default.png"))" />
+                    <img class="img-thumbnail" src="@((comment.ApplicationUser.ProfileImage != null) ? Url.Content("~/images/Profiles/" + comment.ApplicationUser.ProfileImage) : Url.Content("~/images/Profiles/default.png"))" />
                 </div>
 
                 <div style="font-family: Calibri,Verdana,Helvetica,sans-serif;" class="col-8 col-sm-9 col-md-9">
