--- a/KINOv2/KINOv2/Views/Manage/_StatusMessage.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/_StatusMessage.cshtml
@@ -3,8 +3,8 @@
 @if (!String.IsNullOrEmpty(Model))
 {
     var statusMessageClass = Model.StartsWith("Error") ? "danger" : "success";
-    <div class="alert alert-@statusMessageClass alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <div class="alert alert-@statusMessageClass alert-dismissible col-lg-9 ml-3" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="box-shadow:none; outline:none;"><span aria-hidden="true">&times;</span></button>
         @Model
     </div>
 }
