--- a/KINOv2/KINOv2/Views/_ViewImports.cshtml
+++ b/KINOv2/KINOv2/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using KINOv2.Models.ManageViewModels
 @using KINOv2.Models.ReferenceBooks
 @using KINOv2.Models.ContentManageViewModels
+@using KINOv2.Models.AdditionalEFEntities;
 @using NonFactors.Mvc.Grid
 @using Microsoft.AspNetCore.Html
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
