--- a/KINOv2/KINOv2/Views/Home/Profile.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Profile.cshtml
@@ -22,21 +22,32 @@
         <div class="text-center mb-1">
             <span class="h4 text-orange">@Model.Username</span>
         </div>
-        <div class="text-center mb-1">
-            <span class="text-center">@Model.Name @Model.SurName, @Model.Age</span>
-        </div>
-        <div class="row">
-            <label class="text-info col-4 text-right" asp-for="@Model.Email"></label>
-            <span class="col">@Model.Email</span>
-        </div>
-        <div class="row">
-            <label class="text-info col-4 text-right" asp-for="@Model.City"></label>
-            <span class="col">@Model.City</span>
-        </div>
+        @if (Model.PersonalInfoVisible)
+        {
+            <div class="text-center mb-1">
+                <span class="text-center">@Model.Name @Model.SurName, @Model.Age</span>
+            </div>
+            <div class="row">
+                <label class="text-info col-4 text-right" asp-for="@Model.Email"></label>
+                <span class="col">@Model.Email</span>
+            </div>
+            <div class="row">
+                <label class="text-info col-4 text-right" asp-for="@Model.City"></label>
+                <span class="col">@Model.City</span>
+            </div>
+        }
+        else
+        {
+            <div class="text-center mb-1">
+                <span class="text-center text-info">Пользователь ограничил доступ к личным данным</span>
+            </div>
+        }
 
     </div>
     <h2 class="col-12 order-md-3">Избранные фильмы</h2>
     <div class="col-12 col-lg-10 order-md-4">
+        @if (Model.SelectedFilmsVisible)
+        {
         <table class="table table-sm table-striped">
             <thead>
                 <tr>
@@ -58,5 +69,12 @@
             <tfoot>
             </tfoot>
         </table>
+        }
+        else
+        {
+            <p class="text-center text-info h3">
+                Пользователь ограничил доступ к избранным фильмам
+            </p>
+        }
     </div>
 </div>
