--- a/KINOv2/KINOv2/Views/Manage/IndexOld.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/IndexOld.cshtml
@@ -204,7 +204,7 @@
             </div>
         </div>
         <div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
-            <div class="row">
+            @*<div class="row">
                 <h2 class="col-12">Смена пароля</h2>
                 <hr class="w-100 d-none d-md-block ml-3 col-lg-9" />
                 <div class="col-12 col-sm-9 col-lg-5">
@@ -228,7 +228,7 @@
                         <button type="submit" class="btn border-orange">Обновить пароль</button>
                     </form>
                 </div>
-            </div>
+            </div>*@
         </div>
     </div>
 </div>
