--- a/KINOv2/KINOv2/Views/Manage/ExternalLogins.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/ExternalLogins.cshtml
@@ -7,8 +7,10 @@
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 @if (Model.CurrentLogins?.Count > 0)
 {
-    <h4>Registered Logins</h4>
-    <table class="table">
+<div class="row">
+    <h2 class="col-12">Используемые внешние учетные записи</h2>
+    <hr class="w-100 d-none d-sm-none d-md-block ml-3 col-lg-9" />
+    <table class="table col-lg-10">
         <tbody>
             @foreach (var login in Model.CurrentLogins)
             {
@@ -34,21 +36,22 @@
             }
         </tbody>
     </table>
+</div>
 }
 @if (Model.OtherLogins?.Count > 0)
 {
     <div class="row">
-    <h2 class="col-12">Добавить внешную учетную запись.</h2>
-    <hr class="w-100 d-none d-sm-none d-md-block ml-3 col-lg-9" />
-    <form asp-action="LinkLogin" method="post" class="form-horizontal col-lg-10">
-        <div id="socialLoginList">
-            <p class="col-12 col-lg-3 order-12 order-lg-4">
-                @foreach (var provider in Model.OtherLogins)
-                {
-                    <button type="submit" class="btn border-orange w-100" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                }
-            </p>
-        </div>
-    </form>
+        <h2 class="col-12">Добавить внешную учетную запись.</h2>
+        <hr class="w-100 d-none d-sm-none d-md-block ml-3 col-lg-9" />
+        <form asp-action="LinkLogin" method="post" class="form-horizontal col-lg-10">
+            <div id="socialLoginList">
+                <p class="col-12 col-lg-3 order-12 order-lg-4">
+                    @foreach (var provider in Model.OtherLogins)
+                    {
+                        <button type="submit" class="btn border-orange w-100" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                    }
+                </p>
+            </div>
+        </form>
     </div>
 }
