--- a/KINOv2/KINOv2/Views/Manage/SetPassword.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/SetPassword.cshtml
@@ -1,30 +1,30 @@
 ﻿@model SetPasswordViewModel
 @{
-    ViewData["Title"] = "Set password";
+    ViewData["Title"] = "Настройка пароля";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
 }
 
-<h4>Set your password</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
-<p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
-</p>
 <div class="row">
+    @Html.Partial("_StatusMessage", Model.StatusMessage)
+    <h2 class="col-12">Настройка пароля</h2>
+    <hr class="w-100 d-none d-sm-none d-md-block ml-3 col-lg-9" />
+    <p class="text-info">
+        У Вас нет локальной учетной записи. Создайте ее для обеспечения возможности войти на сайт без использования внешней учетной записи.
+    </p>
     <div class="col-md-6">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="NewPassword"></label>
-                <input asp-for="NewPassword" class="form-control" />
+                <label class="text-info" asp-for="NewPassword"></label>
+                <input asp-for="NewPassword" class="form-control control" />
                 <span asp-validation-for="NewPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
+                <label class="text-info" asp-for="ConfirmPassword"></label>
+                <input asp-for="ConfirmPassword" class="form-control control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Set password</button>
+            <button type="submit" class="btn border-orange w-100">Изменить</button>
         </form>
     </div>
 </div>
