--- a/KINOv2/KINOv2/Views/Account/Login.cshtml
+++ b/KINOv2/KINOv2/Views/Account/Login.cshtml
@@ -51,7 +51,7 @@
     </div>
     <div class="col-md-5 col-12 ml-auto">
         <section>
-            <h4>Сторонние сервисы.</h4>
+            <h4>Сторонние сервисы</h4>
             <hr />
             @{
                 var loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
