--- a/KINOv2/KINOv2/Views/Shared/_Layout.cshtml
+++ b/KINOv2/KINOv2/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 </head>
 <body>
     <!-- Yandex.Metrika counter -->
-    @*<script type="text/javascript">
+    <script type="text/javascript">
         (function (d, w, c) {
             (w[c] = w[c] || []).push(function () {
                 try {
@@ -59,7 +59,7 @@
             } else { f(); }
         })(document, window, "yandex_metrika_callbacks");
     </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/48798209" style="position:absolute; left:-9999px;" alt="" /></div></noscript>*@
+    <noscript><div><img src="https://mc.yandex.ru/watch/48798209" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
 
     <div class="up-button-mobile up-button-hidden" onclick="onUpButtonClick()"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
