--- a/KINOv2/KINOv2/Views/Manage/_ManageNav.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/_ManageNav.cshtml
@@ -5,11 +5,11 @@
 }
 
 <ul class="profile-menu align-items-baseline align-self-md-start d-flex d-md-inline-flex flex-md-column flex-row justify-content-between mt-3 nav" id="myTab" role="tablist">
-    <li class="nav-item session-nav">
-        <a class="@ManageNavPages.IndexNavClass(ViewContext) btn col nav-link px-md-3 show text-center border-orange" asp-action="Index">Профиль</a>
+    <li class="nav-item session-nav ">
+        <a class="@ManageNavPages.IndexNavClass(ViewContext) px-2 px-md-3 btn col nav-link px-md-3 show text-center border-orange" asp-action="Index">Профиль</a>
     </li>
     <li class="nav-item session-nav">
-        <a class="@ManageNavPages.HistoryNavClass(ViewContext) btn nav-link px-md-3 text-center border-orange" asp-action="History">История</a>
+        <a class="@ManageNavPages.HistoryNavClass(ViewContext) px-2 px-md-3 btn nav-link px-md-3 text-center border-orange" asp-action="History">История</a>
     </li>
     <li class="nav-item w-100 d-none d-md-block">
         <a class="@ManageNavPages.SettingsNavClass(ViewContext) border-orange btn nav-link text-center" asp-action="Settings">Настройка профиля</a>
