--- a/KINOv2/KINOv2/wwwroot/css/site.css
+++ b/KINOv2/KINOv2/wwwroot/css/site.css
@@ -515,7 +515,7 @@ input[type="text"] {
 }
 
 .dropdown-fix {
-    left: -5px !important;
+    transform: translate3d(-80px, 40px, 0px) !important;
 }
 
 .h_iframe iframe {
