исправлены события при переходе на удачную/неудачную оплату, сделано апи для рейтинга фильмов

--- a/KINOv2/KINOv2/Views/Kassa/Fail.cshtml
+++ b/KINOv2/KINOv2/Views/Kassa/Fail.cshtml
@@ -9,5 +9,5 @@
 <p>Подробности можно увидеть в <a asp-controller="Manage" asp-action="History">личном кабинете</a></p>
 <p>Приходите еще!</p>
 <script>
-    window.postMessage("fail", "KINOv2")
+    window.postMessage("fail", window.location)
 </script>
