--- a/KINOv2/KINOv2/Views/Kassa/Success.cshtml
+++ b/KINOv2/KINOv2/Views/Kassa/Success.cshtml
@@ -10,5 +10,5 @@
 <p>Ваш номер заказа <span style="font-size: 24px">@ViewData["ValidationKey"].ToString()</span> , предъявите его в кассе и получите билет.</p>
 <p>Приходите еще!</p>
 <script>
-    window.postMessage("success", "KINOv2")
+    window.postMessage("success", window.location)
 </script>
